[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ui-bits/Submenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://sounds/show-upgrades.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/menus/upgrades/EnhancementLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menus/upgrades/Upgrades.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui-bits/Alert.tscn" type="PackedScene" id=5]
[ext_resource path="res://music/upgrades.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/menus/upgrades/UpgradeLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui-bits/FullAlert.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 0.27451, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.27451, 1, 0.27451, 1 )

[node name="Upgrades" instance=ExtResource( 1 )]
script = ExtResource( 4 )
auto_select = NodePath("Content/NavigationButtons/Back")
upgrade_label = ExtResource( 7 )
enhancement_label = ExtResource( 3 )
use_ascending_sort = false

[node name="ShowSound" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 6 )
bus = "Music"

[node name="Content" parent="." index="4"]
__meta__ = {
"_editor_description_": ""
}

[node name="Title" parent="Content" index="0"]
text = "upgrades"

[node name="Stats" type="HBoxContainer" parent="Content" index="1"]
margin_top = 85.0
margin_right = 520.0
margin_bottom = 114.0
custom_constants/separation = 20

[node name="Coins" type="Label" parent="Content/Stats" index="0"]
margin_right = 160.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "$0"

[node name="Damage" type="Label" parent="Content/Stats" index="1"]
margin_left = 180.0
margin_right = 340.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "30 damage/shot"

[node name="Health" type="Label" parent="Content/Stats" index="2"]
margin_left = 360.0
margin_right = 520.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 3 )
text = "100 health"

[node name="NavigationButtons" type="HBoxContainer" parent="Content" index="2"]
margin_top = 134.0
margin_right = 520.0
margin_bottom = 173.0
custom_constants/separation = 20

[node name="Back" type="Button" parent="Content/NavigationButtons" index="0"]
margin_right = 250.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Done"

[node name="ChangeTab" type="Button" parent="Content/NavigationButtons" index="1"]
margin_left = 270.0
margin_right = 520.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Switch to loadout"

[node name="TabContainer" type="TabContainer" parent="Content" index="3"]
margin_top = 193.0
margin_right = 520.0
margin_bottom = 730.0
size_flags_vertical = 3
tab_align = 0

[node name="Upgrades" type="VBoxContainer" parent="Content/TabContainer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 56.0
custom_constants/separation = 20

[node name="Sorting" type="HBoxContainer" parent="Content/TabContainer/Upgrades" index="0"]
unique_name_in_owner = true
margin_right = 520.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 20

[node name="SortCategory" type="OptionButton" parent="Content/TabContainer/Upgrades/Sorting" index="0"]
margin_right = 69.0
margin_bottom = 39.0
text = "Cost"
items = [ "Cost", null, false, 0, null, "Damage", null, false, 1, null, "Health", null, false, 2, null ]
selected = 0

[node name="SortMode" type="OptionButton" parent="Content/TabContainer/Upgrades/Sorting" index="1"]
margin_left = 89.0
margin_right = 210.0
margin_bottom = 39.0
text = "Descending"
items = [ "Ascending", null, false, 0, null, "Descending", null, false, 1, null ]
selected = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Content/TabContainer/Upgrades" index="1"]
margin_top = 59.0
margin_right = 520.0
margin_bottom = 481.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Upgrades" type="VBoxContainer" parent="Content/TabContainer/Upgrades/ScrollContainer" index="0"]
unique_name_in_owner = true
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loadout" type="ScrollContainer" parent="Content/TabContainer" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 56.0
follow_focus = true

[node name="LoadoutUpgrades" type="VBoxContainer" parent="Content/TabContainer/Loadout" index="0"]
unique_name_in_owner = true
margin_right = 520.0
margin_bottom = 132.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Lasers" type="Label" parent="Content/TabContainer/Loadout/LoadoutUpgrades" index="0"]
margin_right = 499.0
margin_bottom = 56.0
theme = ExtResource( 10 )
theme_type_variation = "SeparatorLabel"
text = "Lasers"

[node name="Ship" type="Label" parent="Content/TabContainer/Loadout/LoadoutUpgrades" index="1"]
margin_top = 629.0
margin_right = 499.0
margin_bottom = 685.0
theme = ExtResource( 10 )
theme_type_variation = "SeparatorLabel"
text = "Ship"

[node name="Alert" parent="." index="5" instance=ExtResource( 5 )]

[node name="QuitConfirm" parent="." index="6" instance=ExtResource( 9 )]
visible = false
text = "Are you sure you would like to go back to the game?"
is_confirmation = true

[connection signal="pressed" from="Content/NavigationButtons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Content/NavigationButtons/ChangeTab" to="." method="_on_ChangeTab_pressed"]
[connection signal="tab_changed" from="Content/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="item_selected" from="Content/TabContainer/Upgrades/Sorting/SortCategory" to="." method="_on_SortCategory_item_selected"]
[connection signal="item_selected" from="Content/TabContainer/Upgrades/Sorting/SortMode" to="." method="_on_SortMode_item_selected"]
[connection signal="ready" from="Content/TabContainer/Loadout/LoadoutUpgrades" to="." method="_on_LoadoutUpgrades_ready"]
[connection signal="confirmed" from="QuitConfirm" to="." method="_on_QuitConfirm_confirmed"]
